src/test/deca/context/valid/SansObjet/DeclVar-stringString.deca
// Description:
//    Declaration of a string variable with initialization.
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x = "Hello" ;
}
