src/test/deca/context/invalid/SansObjet/DeclVar-NE-string-float-string.deca
// Description:
//    Declaration of a string variable using != operation between a float variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  2.5; 
    string y = "World"; 
    string z = 2.5 != "World"; 
}
